--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ title = "ByteWise Network Services"
 [params]
   # In most cases you will only want to set the google_analytics_id OR the google_tag_manager_id. If you have Google Analytics included in your GTM tags don't put your GA ID here. Otherwise your data might be useless.
   google_analytics_id = ""
-  google_tag_manager_id = ""
+  google_tag_manager_id = "G-GX4PK9BQN1"
   favicon = "favicon-32x32.png"
 
   [params.homepage]
